--- a/information.html
+++ b/information.html
@@ -18,6 +18,8 @@
 
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
+    <!-- General CSS -->
+    <link href="css/general.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -46,7 +48,7 @@
 <body>
 
      <!-- Navigation -->
-     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+     <nav class="navbar navbar-default navbar-absolute">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
